--- a/pacrfrontend/package.json
+++ b/pacrfrontend/package.json
@@ -14,6 +14,7 @@
     "next": "^14.2.14",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.10",
     "react-phone-input-2": "^2.15.1",
     "styled-components": "^6.1.11"
   }
