--- a/pacrfrontend/package.json
+++ b/pacrfrontend/package.json
@@ -12,9 +12,12 @@
     "axios": "^1.7.2",
     "cities.json": "^1.1.41",
     "next": "^14.2.14",
+    "pdf-viewer-reactjs": "^2.2.3",
+    "pdfjs-dist": "^4.7.76",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.10",
+    "react-pdf": "^9.1.1",
     "react-phone-input-2": "^2.15.1",
     "styled-components": "^6.1.11"
   }
