--- a/pacrfrontend/package.json
+++ b/pacrfrontend/package.json
@@ -17,6 +17,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.10",
+    "react-modal": "^3.16.1",
     "react-pdf": "^9.1.1",
     "react-phone-input-2": "^2.15.1",
     "styled-components": "^6.1.11"
