--- a/pacrfrontend/package.json
+++ b/pacrfrontend/package.json
@@ -20,6 +20,7 @@
     "react-modal": "^3.16.1",
     "react-pdf": "^9.1.1",
     "react-phone-input-2": "^2.15.1",
+    "react-select": "^5.8.3",
     "styled-components": "^6.1.11"
   }
 }
